# networked-players

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: bash-post-notify.sh  bash-pre-timer.sh  session-start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  project-task.yml
.github/workflows/: daily-manifest-status.yml  discogs-dump-research.yml  python.yml  web.yml
apps/: __init__.py
apps/api/: README.md
apps/review/: README.md  __init__.py  review_server.py
apps/web/: .gitignore  .prettierignore  AGENTS.md  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.mjs  wrangler.jsonc
data/: README.md
data/albums/: README.md  studio-album-master-exclusions-v1.json  top-albums-v1.json
data/contracts/: README.md  album-art-v1.md  album-cohort-connectivity-v1.md  album-cohort-extracted-v1.md  album-cohort-resolved-v1.md  challenge-v2.md  cohort-source-v1.md  connection-daily-manifest-v1.md  discogs-master-v1.md  discogs-onehop-v1.md  discogs-release-v2.md  discogs-seed-v1.md  game-rounds-v1.md  game-universe-v1.md  graph-snapshot-v1.md  playable-cohort-v1.md  record-routes-v1.md  rounds-v1.md
data/samples/: README.md  cohort-source-release-card-sample.html  cohort-source-sample.html  discogs-api-release-sample.json  discogs-collection-export.csv
docs/: ARCHITECTURE.md  BUILD_PLAN.md  COHORT_SOURCE_INGESTION.md  DATA_AND_RIGHTS.md  DATA_SIZING.md  DISCOGS_INGESTION.md  GLOSSARY.md  HARDWARE.md  OPERATOR_SETUP.md  PRODUCT.md  PUBLIC_PRIVATE_BOUNDARY.md  REFERENCES.md  RELEASE_FORMAT_RESEARCH.md  ROADMAP.md  STUDIO_ALBUM_CATALOG_AUDIT.md  WEB_PRODUCT_PLAN.md
docs/data/: studio-album-catalog-audit-v1.json  studio-album-catalog-inclusion-audit-v1.json
docs/decisions/: 0001-public-by-default.md  0002-static-first-public-experience.md  0003-monorepo.md  0004-canonical-product-domain.md  0005-discogs-hybrid-acquisition.md  0006-stream-discogs-gzip-to-parquet.md  0007-zimaboard-swarm-manager.md  0008-portainer-swarm-visibility.md  0009-portainer-tailscale-access.md  0010-coordination-stack-ahead-of-nvme.md  0011-private-seed-contract.md  0012-real-discogs-api-demo-challenge.md  0013-nvme-storage-layout.md  0014-coordination-host-hardening.md  0015-fleet-onboarding.md  0016-state-backup-and-recovery.md  0017-guarded-swarm-worker-join-automation.md  0018-benchmark-results-local-only.md  0019-cluster-benchmark-rq-job-broker.md  0020-dask-jupyter-interactive-cluster-compute.md  0021-canonical-benchmarks-and-dask-rq-isolation.md  0022-second-zimaboard-joins-as-x86-swarm-worker.md  0023-x86-worker-joins-rq-dask-fleet-work.md  0024-http-readonly-catalog-data-access.md  0025-worker-local-dataset-cache.md  0026-exclude-placeholder-artists-from-one-hop-frontier.md  0027-exclude-non-performer-roles-from-one-hop-frontier.md  0028-curated-cohort-source-ingestion.md  0029-connectivity-scorer-flags-dont-fix-traversal-gap.md  0030-cohort-scoped-connectivity-substrate.md  0031-human-reviewed-cohort-promotion.md  0032-cohort-seed-bfs-fleet-dispatch.md  0033-memory-bounded-cohort-scoring.md  0034-capability-routed-home-compute-platform.md  0035-track-scoped-credit-edges.md  0036-interim-release-title-curation-filter.md  0037-hybrid-album-catalog-assembly.md  0037-web-game-universe-and-round-engine.md  0038-hybrid-album-catalog-assembly.md  0038-performer-allowlist-layered-for-game-rounds.md  (+11 more)
docs/discogs-data/: README.md  api-schema.md  normalized-mapping.md  one-hop-hub-artists.md  raw-dump-schema.md
infra/: README.md
infra/ansible/: README.md  ansible.cfg  bootstrap-worker-ssh.sh  join-worker.sh  reboot-and-verify-worker.sh  run-benchmark-local.sh  run-dask-worker-burst-local.sh  run-deploy-album-art-check-job-local.sh  run-deploy-catalog-check-job-local.sh  run-deploy-cohort-check-job-local.sh  run-deploy-cohort-seed-bfs-job-local.sh  run-deploy-connection-rounds-check-job-local.sh  run-deploy-daily-manifest-check-job-local.sh  run-deploy-platform-runtime-local.sh  run-deploy-record-routes-check-job-local.sh  run-deploy-rounds-check-job-local.sh  run-deploy-rq-benchmark-job-local.sh  run-deploy-verify-job-local.sh  run-equip-workers-local.sh  run-equip-x86-workers-local.sh  run-harden-workers-local.sh  run-health-local.sh  run-onboard-local.sh  run-playbook-local.sh  run-replicate-dataset-pi-local.sh  run-replicate-dataset-x86-local.sh  run-rq-burst-worker-local.sh  run-stage-artifact-local.sh  run-swarm-join-local.sh  verify-worker-docker.sh
infra/dask/: Dockerfile  README.md  dask.env.example  deploy-dask.sh  docker-compose.dask-worker-remote.yml  docker-compose.jupyter.yml  docker-stack.dask.yml  requirements.txt
infra/swarm/: .env.example  README.md  bootstrap-manager.sh  catalog-data-nginx.conf  catalog-data.env.example  deploy-catalog-data.sh  deploy-coordination.sh  deploy-jobs-broker.sh  drill-worker.sh  (+14 more)
scripts/: _artifact_staging.py  _fleet_check.py  backup-coordination-stack.sh  backup-swarm-manager-state.sh  build-platform-release.sh  check-ingest-feasibility.sh  check-ingest-recovery.sh  check_ingest_recovery.py  cluster-benchmark-distributed.sh  cluster_benchmark_distributed.py  download-all-kinds.sh  enqueue-album-art-check.sh  enqueue-catalog-check.sh  enqueue-cohort-check.sh  enqueue-cohort-seed-bfs.sh  enqueue-connection-rounds-check.sh  enqueue-daily-manifest-check.sh  enqueue-record-routes-check.sh  enqueue-rounds-check.sh  enqueue-verify-challenge.sh  enqueue_album_art_check.py  enqueue_catalog_check.py  enqueue_cohort_check.py  enqueue_cohort_seed_bfs.py  enqueue_connection_rounds_check.py  enqueue_daily_manifest_check.py  enqueue_record_routes_check.py  enqueue_rounds_check.py  enqueue_verify_challenge.py  install-duckdb-cli.sh  install-gh-cli.sh  install-run-and-ntfy.sh  install-tailscale.sh  join-all-workers.sh  monitor-heavy-job.sh  platform-status.sh  prepare-swarm-services.sh  profile-discogs-dataset.sh  recover-pi-docker.sh  replicate-rsync.sh  (+9 more)
tests/: README.md
(+145 files in other folders)
