[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "networked-players-catalog"
version = "0.1.0"
description = "Evidence-preserving catalog ingestion tools for Networked Players"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.2,<2",
  "lxml>=5.3,<7",
  "networked-players-contracts",
  "networked-players-platform",
  "pyarrow>=18,<24",
]

[project.optional-dependencies]
dev = [
  "lxml-stubs>=0.5,<1",
  "mypy>=1.15,<2",
  "pytest>=8,<10",
  "ruff>=0.12,<1",
]
# For scripts/cluster_benchmark_distributed.py only (coordination-host side of
# the cluster-vs-single-node RQ benchmark, ADR 0019). Version bounds match
# what infra/ansible/playbooks/equip-workers.yml installs into the worker venv.
jobs = [
  "redis>=5,<9",
  "rq>=2,<3",
]

[project.scripts]
networked-players-catalog = "networked_players_catalog.cli:main"

[project.entry-points."networked_players.workloads"]
cohort-score = "networked_players_catalog.platform_jobs:cohort_score_workload"

[tool.uv.workspace]
members = ["packages/contracts", "packages/platform"]

[tool.uv.sources]
networked-players-contracts = { workspace = true }
networked-players-platform = { workspace = true }

[tool.setuptools]
packages = [
  "networked_players_catalog",
  "networked_players_catalog.discogs",
  "networked_players_catalog.cohort_source",
  "networked_players_graph_core",
]

[tool.setuptools.package-dir]
networked_players_catalog = "packages/catalog/src/networked_players_catalog"
networked_players_graph_core = "packages/graph-core/src/networked_players_graph_core"

[tool.setuptools.package-data]
# The reviewable placeholder-artist exclusion list (ADR 0035); graph.py loads
# it with importlib.resources, so it must ship inside the package.
networked_players_graph_core = ["placeholder_artists.json"]

[tool.pytest.ini_options]
testpaths = [
  "packages/catalog/tests",
  "packages/contracts/tests",
  "packages/graph-core/tests",
  "packages/platform/tests",
]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
  "packages/catalog/src",
  "packages/catalog/tests",
  "packages/contracts/src",
  "packages/contracts/tests",
  "packages/graph-core/src",
  "packages/graph-core/tests",
  "packages/platform/src",
  "packages/platform/tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
packages = [
  "networked_players_catalog",
  "networked_players_contracts",
  "networked_players_graph_core",
  "networked_players_platform",
]
mypy_path = [
  "packages/catalog/src",
  "packages/contracts/src",
  "packages/graph-core/src",
  "packages/platform/src",
]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["duckdb", "pyarrow", "pyarrow.parquet"]
ignore_missing_imports = true
